# S7_PLC_simple_DB_rw

./: CMakeLists.txt  README_EN.md  README_RU.md
app-build-x64/: settings.json  sysparams_en.txt
lng/: S7_DB_reader_en.ts
src/: CMakeLists.txt  S7_DB_reader_ru_en.qm  hintinputdialog.cpp  hintinputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plc_data_handler.cpp  plc_data_handler.h  resrc.qrc
src/img/: PLCRW.rc  icon.pdn  sysparams_en.txt  sysparams_ru.txt
src/lib/: libwinthread.txt
src/settings/: 20240723_params_test.txt  old_sysparams.txt  settings.json  sysparams.txt
src/snap7/: snap7.cpp  snap7.h
